--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -230,6 +230,7 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
   <ItemGroup>
     <None Include="Settings\AllSettings.ini" />
     <None Include="Settings\Settings.ini" />
+    <None Include="Settings\Stub.ini" />
     <None Include="Wrappers\wrapper.def" />
   </ItemGroup>
   <ItemGroup>
